# advent-of-code-rust

./: .gitignore  Cargo.toml  README.md  day17.py
2021/: Cargo.toml
2021/src/: common.rs  day_01.rs  day_03.rs  lib.rs  main.rs
aoc2015/: Cargo.toml
aoc2015/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_14.rs  lib.rs  main.rs
aoc2021/: Cargo.toml
aoc2021/src/: day_03.rs  lib.rs
aoc2023/: Cargo.toml
aoc2023/src/: day_01.rs  lib.rs  main.rs
common/src/: lib.rs  math.rs  perms.rs
common/src/io/: inputs.rs  mod.rs
input/aoc2024/: day07_testing.txt
src/: lib.rs  main.rs
src/aoc2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs
src/aoc2015/todo/: day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_10.rs  day_12.rs  day_13.rs  day_15.rs
src/aoc2016/: day01.rs  day02.rs  day03.rs  day04.rs
src/aoc2017/: day01.rs  day02.rs  day03.rs  day04.rs
src/aoc2021/: day_01.rs  day_02.rs  day_03.rs
src/aoc2023/: day_01.rs
src/aoc2024/: comp.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_testing.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/aoc2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
src/util/: ansi.rs  bitset.rs  bronkerbosch.rs  frac.rs  grid.rs  hash.rs  heap.rs  integer.rs  iter.rs  math.rs  md5.rs  point.rs  slice.rs  thread.rs  tomita.rs
src/vis2024/: day16.rs
src/vis2025/: day04.rs
tests/: test.rs
tests/aoc2015/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs  day05_test.rs  day06_test.rs
tests/aoc2016/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs
tests/aoc2017/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs
tests/aoc2024/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs  day05_test.rs  day06_test.rs  day07_test.rs  day08_test.rs  day09_test.rs  day10_test.rs  day11_test.rs  day12_test.rs  day13_test.rs  day14_test.rs  day15_test.rs  day16_test.rs  day17_test.rs  day18_test.rs  day19_test.rs  day20_test.rs  day21_test.rs  day22_test.rs  day23_test.rs  day24_test.rs  day25_test.rs
tests/aoc2025/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs  day05_test.rs  day06_test.rs  day07_test.rs  day08_test.rs  day09_test.rs  day10_test.rs  day11_test.rs  day12_test.rs
