[package]
name = "aoc"
version = "0.2.0"
edition = "2021"
authors = ["Mark Fisher <mark.j.fisher@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
rust-crypto = "0.2.36"
cached = "0.54.0"
regex = "1.5.4"
serde_json = "1.0.74"
claim = "0.5.0"
assert_unordered = "0.3.5"
tailcall = "1.0.1"
rayon = "1.10.0"
indoc = "2.0.5"
pretty_assertions = "1.4.1"
pathfinding = "4.12.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"

[features]
simd = []
