[package]
name = "aoc"
version = "0.2.0"
edition = "2021"
authors = ["Mark Fisher <mark.j.fisher@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_unordered = "0.3.5"
cached = "0.56.0"
claim = "0.5.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
indoc = "2.0.7"
itertools = "0.14.0"
itoa = "1"
md-5 = "0.10.6"
once_cell = "1.21.3"
pathfinding = "4.14.0"
petgraph = "0.8.3"
pretty_assertions = "1.4.1"
ratatui = "0.29.0"
rayon = "1.11.0"
regex = "1.12.2"
# rust-crypto = "0.2.36"
serde_json = "1.0.145"
tailcall = "1.0.1"

[features]
simd = []
