[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
authors = ["Mark Fisher <mark.j.fisher@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.1"
rust-crypto = "0.2.36"