[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
authors = ["Mark Fisher <mark.j.fisher@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.1"
rust-crypto = "0.2.36"
cached = "0.26.2"
regex = "1.5.4"
serde_json = "1.0.74"

#ai_kit = "0.1.0"
#lp-modeler = "0.5.0"
#coin_cbc_sys = "0.1.1"
#coin_cbc = "0.1.6"

#[features]
#lp_modeler = "native_coin_cbc"